--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.2.0",
+    "@angular/cdk": "~17.3.2",
     "@angular/common": "~17.2.0",
     "@angular/compiler": "~17.2.0",
     "@angular/core": "~17.2.0",
     "@angular/forms": "~17.2.0",
+    "@angular/material": "~17.3.2",
     "@angular/platform-browser": "~17.2.0",
     "@angular/platform-browser-dynamic": "~17.2.0",
     "@angular/router": "~17.2.0",
+    "@ngrx/signals": "^17.1.1",
     "@nx/angular": "18.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,6 +31,7 @@
     "@angular/cli": "~17.2.0",
     "@angular/compiler-cli": "~17.2.0",
     "@angular/language-service": "~17.2.0",
+    "@angular/material": "^17.3.2",
     "@nx/cypress": "18.1.3",
     "@nx/eslint": "18.1.3",
     "@nx/eslint-plugin": "18.1.3",
@@ -43,6 +47,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.0",
     "cypress": "^13.6.6",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -51,7 +56,9 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~14.0.3",
     "nx": "18.1.3",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2"
